changed readme (works and todo)

--- a/readme
+++ b/readme
@@ -2,8 +2,20 @@
 author: shane
 license: gpl3 or greater
 
-sit in the system tray
-peek at the clipboard
-something new?
-	save it to a file
-maybe view that file
+what works
+-polls clipboard
+-gets cb contents
+-prints them
+-show tray icon
+-pop up menu
+
+TODO
+-tray icon image
+-get contents on change only (possible?)
+	FlavorListener?
+-pop up menu choices
+	o on
+	o off
+	o see history
+	o to file, change file
+-pop up menu actions
