updated readme, testing new icons
new icons dont work on win 7

--- a/readme
+++ b/readme
@@ -11,11 +11,12 @@ what works
 
 TODO
 -tray icon image
--get contents on change only (possible?)
-	FlavorListener?
+-get contents on change only (possible? in java7 maybe)
+	FlavorListener? nope
 -pop up menu choices
 	o on
 	o off
 	o see history
 	o to file, change file
 -pop up menu actions
+	o Command class
