--- a/readme
+++ b/readme
@@ -4,3 +4,8 @@ written in python and Tk
 
 This program shows a history of your clipboard history.
 Logs your copy pastes, if you will.
+
+Want a feature added? Enter it below.
+-an installer
+-live in the system tray, not the taskbar
+-
